Implemented copying to clipboard

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -91,7 +91,9 @@
                                             <StackPanel Grid.Column="2"
                                                         Orientation="Horizontal">
                                                 <Button Margin="2"
-                                                        ToolTipService.ToolTip="{loc:StringResource Key=CopyPassword}">
+                                                        CommandParameter="{Binding}"
+                                                        ToolTipService.ToolTip="{loc:StringResource Key=CopyPassword}"
+                                                        Command="{Binding ElementName=PasswordsIndex_Pivot, Path=DataContext.CopyPasswordToClipboardCommand}">
                                                     <FontIcon Glyph="&#xE8C8;"
                                                               FontSize="{StaticResource FontIconSize}"/>
                                                 </Button>
@@ -101,8 +103,8 @@
                                                               FontSize="{StaticResource FontIconSize}"/>
                                                 </Button>
                                                 <Button Margin="2" 
-                                                        Command="{Binding ElementName=PasswordsIndex_Pivot, Path=DataContext.DeletePasswordCommand}"
                                                         CommandParameter="{Binding}"
+                                                        Command="{Binding ElementName=PasswordsIndex_Pivot, Path=DataContext.DeletePasswordCommand}"
                                                         ToolTipService.ToolTip="{loc:StringResource Key=DeletePassword}">
                                                     <FontIcon Glyph="&#xE74D;"
                                                               FontSize="{StaticResource FontIconSize}"/>
@@ -137,5 +139,6 @@
                 <views:EditPasswordView />
             </PivotItem>
         </Pivot>
+        
     </Grid>
 </abstract:PageBase>
