--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -123,9 +123,9 @@
                                     VerticalAlignment="Center"
                                     HorizontalAlignment="Center">
 
-                            <TextBlock Text="You have no saved passwords" />
+                            <TextBlock Text="{loc:StringResource Key=NoPasswordsYet}" />
                             <Button Margin="10" 
-                                    Content="Create Password"
+                                    Content="{loc:StringResource Key=AddPassword}"
                                     HorizontalAlignment="Center"
                                     Style="{StaticResource AccentButtonStyle}"
                                     Command="{Binding Path=CreatePasswordCommand}"/>
