--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditPasswordView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditPasswordView.xaml
@@ -6,7 +6,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
     xmlns:viewmodels="using:Pango.Desktop.Uwp.ViewModels"
-    xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract"
+    xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract" xmlns:controls="using:Pango.Desktop.Uwp.Controls"
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance Type=viewmodels:EditPasswordViewModel}"
     d:DesignHeight="300"
@@ -26,10 +26,11 @@
             <StackPanel Orientation="Vertical">
 
                 <StackPanel Orientation="Vertical">
-                    <TextBox Margin="10" 
-                             Text="{Binding Path=Name, Mode=TwoWay}"
-                             Header="{loc:StringResource Key='Title'}" 
-                             PlaceholderText="{loc:StringResource Key='Title'}" />
+                    <controls:ValidationTextBox Margin="10" 
+                                                Text="{Binding Path=PasswordValidator.Title, Mode=TwoWay}"
+                                                PropertyName="Title"
+                                                HeaderText="{loc:StringResource Key='Title'}"  
+                                                PlaceholderText="{loc:StringResource Key='Title'}" />
                     <TextBox Margin="10" 
                              Text="{Binding Path=Login, Mode=TwoWay}"
                              Header="{loc:StringResource Key='Login'}" 
