--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditPasswordView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditPasswordView.xaml
@@ -24,21 +24,21 @@
         <ScrollViewer Grid.Row="1">
 
             <StackPanel Orientation="Vertical">
-
-                <StackPanel Orientation="Vertical">
-                    <controls:ValidationTextBox Margin="10" 
-                                                Text="{Binding Path=PasswordValidator.Title, Mode=TwoWay}"
+                <StackPanel Orientation="Vertical" 
+                            DataContext="{Binding PasswordValidator}">
+                    <controls:ValidationTextBox Margin="10"
                                                 PropertyName="Title"
+                                                Text="{Binding Path=Title, Mode=TwoWay}"
                                                 HeaderText="{loc:StringResource Key='Title'}"  
                                                 PlaceholderText="{loc:StringResource Key='Title'}" />
-                    <TextBox Margin="10" 
-                             Text="{Binding Path=Login, Mode=TwoWay}"
-                             Header="{loc:StringResource Key='Login'}" 
-                             PlaceholderText="{loc:StringResource Key='EmailOrUsername'}" />
-                    <TextBox Margin="10" 
-                             Text="{Binding Path=Value, Mode=TwoWay}"
-                             Header="{loc:StringResource Key='Password'}" 
-                             PlaceholderText="{loc:StringResource Key='Password'}" />
+                    <controls:ValidationTextBox Margin="10" 
+                                                Text="{Binding Path=Login, Mode=TwoWay}"
+                                                HeaderText="{loc:StringResource Key='Login'}" 
+                                                PlaceholderText="{loc:StringResource Key='EmailOrUsername'}" />
+                    <controls:ValidationPasswordBox Margin="10" 
+                                                    Password="{Binding Path=Password, Mode=TwoWay}"
+                                                    HeaderText="{loc:StringResource Key='Password'}" 
+                                                    PlaceholderText="{loc:StringResource Key='Password'}" />
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal"
