--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Controls/ValidationTextBox.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Controls/ValidationTextBox.xaml
@@ -6,10 +6,10 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="local:ValidationTextBox">
-                    <Grid ColumnSpacing="12">
+                    <Grid ColumnSpacing="5">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="20" />
                         </Grid.ColumnDefinitions>
                         <TextBox
                             Name="PART_TextBox"
