--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SignInView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SignInView.xaml
@@ -1,5 +1,4 @@
 ﻿<abstract:ViewBase
-    xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract"
     x:Class="Pango.Desktop.Uwp.Views.SignInView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,16 +6,18 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:behaviors="using:Microsoft.Toolkit.Uwp.UI.Behaviors"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
-    xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
     xmlns:enums="using:Pango.Desktop.Uwp.Core.Enums"
+    xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
     xmlns:viewmodels="using:Pango.Desktop.Uwp.ViewModels"
+    xmlns:views="using:Pango.Desktop.Uwp.Views"
+    xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract"
     mc:Ignorable="d"
     d:DataContext="{d:DesignInstance Type=viewmodels:SignInViewModel}"
     d:DesignHeight="800"
     d:DesignWidth="800">
 
     <Grid>
-        <Pivot SelectedIndex="{Binding SignInStepIndex}">
+        <Pivot SelectedIndex="{Binding SignInStepIndex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
             <PivotItem>
                 <Grid HorizontalAlignment="Center"
                       VerticalAlignment="Center">
@@ -24,9 +25,12 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
 
-                    <TextBlock Text="{loc:StringResource Key=SelectUser}"
+                    <TextBlock HorizontalAlignment="Center" 
+                               Text="{loc:StringResource Key=SelectUser}"
                                Style="{StaticResource SubtitleTextBlockStyle}"/>
 
                     <ListView Margin="0,40"
@@ -51,6 +55,29 @@
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
+
+                    <TextBlock Grid.Row="2" 
+                               HorizontalAlignment="Center" 
+                               Text="{loc:StringResource Key=OrCreateUser}"
+                               Style="{StaticResource SubtitleTextBlockStyle}"/>
+                 
+                    <Button Grid.Row="3"
+                            Margin="10"
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Center"
+                            Command="{Binding Path=NavigateToStepCommand}">
+                        <Button.CommandParameter>
+                            <enums:SignInStep>CreateUser</enums:SignInStep>
+                        </Button.CommandParameter>
+                        <Button.Content>
+                            <StackPanel Orientation="Horizontal">
+                                <SymbolIcon Margin="2"
+                                            Symbol="Contact2"/>
+                                <TextBlock Margin="2"
+                                           Text="{loc:StringResource Key=CreateUser}" />
+                            </StackPanel>
+                        </Button.Content>
+                    </Button>
                 </Grid>
             </PivotItem>
             
@@ -92,7 +119,7 @@
                                 HorizontalAlignment="Right">
 
                         <Button Margin="2" 
-                                Command="{Binding Path=NavigateToStep}"
+                                Command="{Binding Path=NavigateToStepCommand}"
                                 Content="{loc:StringResource Key=ChangeUser}">
                             <Button.CommandParameter>
                                 <enums:SignInStep>SelectUser</enums:SignInStep>
@@ -108,8 +135,9 @@
 
             </PivotItem>
 
+            <PivotItem>
+                <views:EditUserView />
+            </PivotItem>
         </Pivot>
-        
-        
     </Grid>
 </abstract:ViewBase>
