--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SignInView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/SignInView.xaml
@@ -31,14 +31,14 @@
                         </Grid.RowDefinitions>
 
                         <TextBlock HorizontalAlignment="Center" 
-                               Text="{loc:StringResource Key=SelectUser}"
-                               Style="{StaticResource SubtitleTextBlockStyle}"/>
+                                   Text="{loc:StringResource Key=SelectUser}"
+                                   Style="{StaticResource SubtitleTextBlockStyle}"/>
 
-                        <ListView Margin="0,40"
-                              Grid.Row="1"
-                              ItemsSource="{Binding Path=Users}"
-                              HorizontalAlignment="Center"
-                              SelectedValue="{Binding Path=SelectedUser, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                        <ListView Margin="0,10,0,40"
+                                  Grid.Row="1"
+                                  ItemsSource="{Binding Path=Users}"
+                                  HorizontalAlignment="Center"
+                                  SelectedValue="{Binding Path=SelectedUser, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                             <ListView.ItemsPanel>
                                 <ItemsPanelTemplate>
                                     <StackPanel Background="Transparent" 
@@ -51,31 +51,31 @@
                                     <StackPanel Orientation="Horizontal">
                                         <SymbolIcon Symbol="Contact2" Margin="2"/>
                                         <TextBlock Margin="2"
-                                               Text="{Binding UserName}" />
+                                                   Text="{Binding UserName}" />
                                     </StackPanel>
                                 </DataTemplate>
                             </ListView.ItemTemplate>
                         </ListView>
 
                         <TextBlock Grid.Row="2" 
-                               HorizontalAlignment="Center" 
-                               Text="{loc:StringResource Key=OrCreateUser}"
-                               Style="{StaticResource SubtitleTextBlockStyle}"/>
+                                   HorizontalAlignment="Center" 
+                                   Text="{loc:StringResource Key=OrCreateUser}"
+                                   Style="{StaticResource SubtitleTextBlockStyle}"/>
 
                         <Button Grid.Row="3"
-                            Margin="10"
-                            VerticalAlignment="Center"
-                            HorizontalAlignment="Center"
-                            Command="{Binding Path=NavigateToStepCommand}">
+                                Margin="10"
+                                VerticalAlignment="Center"
+                                HorizontalAlignment="Center"
+                                Command="{Binding Path=NavigateToStepCommand}">
                             <Button.CommandParameter>
                                 <enums:SignInStep>CreateUser</enums:SignInStep>
                             </Button.CommandParameter>
                             <Button.Content>
                                 <StackPanel Orientation="Horizontal">
                                     <SymbolIcon Margin="2"
-                                            Symbol="Contact2"/>
+                                                Symbol="Contact2"/>
                                     <TextBlock Margin="2"
-                                           Text="{loc:StringResource Key=CreateUser}" />
+                                               Text="{loc:StringResource Key=CreateUser}" />
                                 </StackPanel>
                             </Button.Content>
                         </Button>
@@ -88,15 +88,15 @@
                         </Grid.RowDefinitions>
 
                         <TextBlock Grid.Row="0" 
-                               HorizontalAlignment="Center" 
-                               Text="{loc:StringResource Key=CreateUser}"
-                               Style="{StaticResource SubtitleTextBlockStyle}"/>
+                                   HorizontalAlignment="Center" 
+                                   Text="{loc:StringResource Key=CreateUser}"
+                                   Style="{StaticResource SubtitleTextBlockStyle}"/>
 
                         <Button Grid.Row="1"
-                            Margin="10"
-                            VerticalAlignment="Center"
-                            HorizontalAlignment="Center"
-                            Command="{Binding Path=NavigateToStepCommand}">
+                                Margin="10"
+                                VerticalAlignment="Center"
+                                HorizontalAlignment="Center"
+                                Command="{Binding Path=NavigateToStepCommand}">
                             <Button.CommandParameter>
                                 <enums:SignInStep>CreateUser</enums:SignInStep>
                             </Button.CommandParameter>
@@ -123,8 +123,8 @@
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
 
-                    <StackPanel Margin="10
-                                " Orientation="Horizontal"
+                    <StackPanel Margin="10" 
+                                Orientation="Horizontal"
                                 HorizontalAlignment="Center">
                         <SymbolIcon Margin="2" 
                                     Symbol="Contact2" />
@@ -133,24 +133,25 @@
                     </StackPanel>
 
                     <PasswordBox Margin="2" 
-                             Grid.Row="1"
-                             IsTapEnabled="True" 
-                             IsTabStop="True"
-                             x:Name="PasscodePasswordBox"
-                             Password="{Binding Passcode, Mode=TwoWay}"
-                             PlaceholderText="{loc:StringResource Key=EnterMastercode}">
+                                 Grid.Row="1"
+                                 IsTapEnabled="True" 
+                                 IsTabStop="True"
+                                 x:Name="PasscodePasswordBox"
+                                 KeyDown="PasscodePasswordBox_KeyDown"
+                                 Password="{Binding Passcode, Mode=TwoWay}"
+                                 PlaceholderText="{loc:StringResource Key=EnterMastercode}">
                         <interactivity:Interaction.Behaviors>
                             <behaviors:AutoFocusBehavior />
                         </interactivity:Interaction.Behaviors>
                     </PasswordBox>
 
-                    <StackPanel Grid.Row="2"
+                    <Grid Grid.Row="2"
                                 Margin="0,10"
-                                Orientation="Horizontal"
                                 VerticalAlignment="Center"
-                                HorizontalAlignment="Right">
+                                HorizontalAlignment="Stretch">
 
                         <Button Margin="2" 
+                                HorizontalAlignment="Left"
                                 Command="{Binding Path=NavigateToStepCommand}"
                                 Content="{loc:StringResource Key=ChangeUser}">
                             <Button.CommandParameter>
@@ -159,10 +160,11 @@
                         </Button>
 
                         <Button Margin="2" 
+                                HorizontalAlignment="Right"
                                 Command="{Binding Path=SignInCommand}" 
                                 Content="{loc:StringResource Key=SignIn}"
                                 Style="{StaticResource AccentButtonStyle}"/>
-                    </StackPanel>
+                    </Grid>
                 </Grid>
 
             </PivotItem>
