Add Notes for the password creation view

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditPasswordView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/EditPasswordView.xaml
@@ -40,6 +40,15 @@
                                                     Password="{Binding Path=Password, Mode=TwoWay}"
                                                     HeaderText="{loc:StringResource Key='Password'}" 
                                                     PlaceholderText="{loc:StringResource Key='Password'}" />
+
+                    <TextBlock Text="Notes"
+                               Margin="10,10,0,0"/>
+                    <TextBox Margin="10,10,35,10"
+                             MinHeight="100"
+                             TextWrapping="Wrap"
+                             AcceptsReturn="True"
+                             Text="{Binding Path=Notes, Mode=TwoWay}"
+                             PlaceholderText="Any notes like secret questions, references, etc." />
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal"
