--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -98,7 +98,9 @@
                                                               FontSize="{StaticResource FontIconSize}"/>
                                                 </Button>
                                                 <Button Margin="2"
-                                                        ToolTipService.ToolTip="{loc:StringResource Key=EditPassword}">
+                                                        CommandParameter="{Binding}"
+                                                        ToolTipService.ToolTip="{loc:StringResource Key=EditPassword}"
+                                                        Command="{Binding ElementName=PasswordsIndex_Pivot, Path=DataContext.EditPasswordCommand}">
                                                     <FontIcon Glyph="&#xE70F;"
                                                               FontSize="{StaticResource FontIconSize}"/>
                                                 </Button>
