--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -14,6 +14,35 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
+    <!--<abstract:PageBase.Resources>
+        <DataTemplate x:Key="FolderTemplate" x:DataType="controlpages:ExplorerItem">
+            <TreeViewItem AutomationProperties.Name="{x:Bind Name}"
+            ItemsSource="{x:Bind Children}" IsExpanded="True">
+                <StackPanel Orientation="Horizontal">
+                    <Image Width="20" Source="../Assets/folder.png"/>
+                    <TextBlock Margin="0,0,10,0"/>
+                    <TextBlock Text="{x:Bind Name}" />
+                </StackPanel>
+            </TreeViewItem>
+        </DataTemplate>
+
+        <DataTemplate x:Key="FileTemplate" x:DataType="controlpages:ExplorerItem">
+            <TreeViewItem AutomationProperties.Name="{x:Bind Name}">
+                <StackPanel Orientation="Horizontal">
+                    <FontIcon Glyph="&#xE8A5;" />
+                    <TextBlock Margin="0,0,10,0"/>
+                    <TextBlock Text="{x:Bind Name}"/>
+                </StackPanel>
+            </TreeViewItem>
+        </DataTemplate>
+
+        <controlpages:ExplorerItemTemplateSelector x:Key="ExplorerItemTemplateSelector"
+        FolderTemplate="{StaticResource FolderTemplate}"
+        FileTemplate="{StaticResource FileTemplate}" />
+    </abstract:PageBase.Resources>-->
+
+
+
     <Grid>
         <Pivot x:Name="PasswordsIndex_Pivot">
             <Pivot.HeaderTemplate>
@@ -70,7 +99,9 @@
 
                         <Grid Grid.Row="1"
                               Margin="10">
-                            <ListView ItemsSource="{Binding Path=Passwords}">
+                            <!--<TreeView ItemsSource="{x:Bind DataSource}"
+                                      ItemTemplateSelector="{StaticResource ExplorerItemTemplateSelector}" />-->
+                            <!--<ListView ItemsSource="{Binding Path=Passwords}">
                                 <ListView.ItemTemplate>
                                     <DataTemplate>
                                         <Grid>
@@ -115,7 +146,7 @@
                                         </Grid>
                                     </DataTemplate>
                                 </ListView.ItemTemplate>
-                            </ListView>
+                            </ListView>-->
                         </Grid>
                     </Grid>
 
