feat(passwords): change the passwords list view to a tree view
refs: #20

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -5,7 +5,9 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Pango.Desktop.Uwp.Controls"
+    xmlns:templateselectors="using:Pango.Desktop.Uwp.Controls.TemplateSelectors"
     xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
+    xmlns:models="using:Pango.Desktop.Uwp.Models"
     xmlns:viewmodels="using:Pango.Desktop.Uwp.ViewModels"
     xmlns:views="using:Pango.Desktop.Uwp.Views"
     xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract"
@@ -14,34 +16,36 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <!--<abstract:PageBase.Resources>
-        <DataTemplate x:Key="FolderTemplate" x:DataType="controlpages:ExplorerItem">
+    <abstract:PageBase.Resources>
+        <DataTemplate x:Key="FolderTemplate" x:DataType="models:PasswordExplorerItem">
             <TreeViewItem AutomationProperties.Name="{x:Bind Name}"
-            ItemsSource="{x:Bind Children}" IsExpanded="True">
+                          ItemsSource="{x:Bind Children}" IsExpanded="True">
                 <StackPanel Orientation="Horizontal">
-                    <Image Width="20" Source="../Assets/folder.png"/>
+                    <Image Width="20" 
+                           Source="../Assets/folder.png"/>
                     <TextBlock Margin="0,0,10,0"/>
                     <TextBlock Text="{x:Bind Name}" />
                 </StackPanel>
             </TreeViewItem>
         </DataTemplate>
 
-        <DataTemplate x:Key="FileTemplate" x:DataType="controlpages:ExplorerItem">
+        <DataTemplate x:Key="FileTemplate" 
+                      x:DataType="models:PasswordExplorerItem">
             <TreeViewItem AutomationProperties.Name="{x:Bind Name}">
                 <StackPanel Orientation="Horizontal">
-                    <FontIcon Glyph="&#xE8A5;" />
+                    <FontIcon Margin="5,2"
+                              Glyph="&#xE8D7;"
+                              FontSize="{StaticResource FontIconSize}"/>
                     <TextBlock Margin="0,0,10,0"/>
                     <TextBlock Text="{x:Bind Name}"/>
                 </StackPanel>
             </TreeViewItem>
         </DataTemplate>
 
-        <controlpages:ExplorerItemTemplateSelector x:Key="ExplorerItemTemplateSelector"
-        FolderTemplate="{StaticResource FolderTemplate}"
-        FileTemplate="{StaticResource FileTemplate}" />
-    </abstract:PageBase.Resources>-->
-
-
+        <templateselectors:PasswordExplorerItemTemplateSelector x:Key="PasswordExplorerItemTemplateSelector"
+                                                                FolderTemplate="{StaticResource FolderTemplate}"
+                                                                FileTemplate="{StaticResource FileTemplate}" />
+    </abstract:PageBase.Resources>
 
     <Grid>
         <Pivot x:Name="PasswordsIndex_Pivot">
@@ -99,8 +103,8 @@
 
                         <Grid Grid.Row="1"
                               Margin="10">
-                            <!--<TreeView ItemsSource="{x:Bind DataSource}"
-                                      ItemTemplateSelector="{StaticResource ExplorerItemTemplateSelector}" />-->
+                            <TreeView ItemsSource="{Binding Path=Passwords}"
+                                      ItemTemplateSelector="{StaticResource PasswordExplorerItemTemplateSelector}" />
                             <!--<ListView ItemsSource="{Binding Path=Passwords}">
                                 <ListView.ItemTemplate>
                                     <DataTemplate>
