style(passwords): move the tree view style into a dedicated resource disctionary
refs: #20

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -5,9 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Pango.Desktop.Uwp.Controls"
-    xmlns:templateselectors="using:Pango.Desktop.Uwp.Controls.TemplateSelectors"
     xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
-    xmlns:models="using:Pango.Desktop.Uwp.Models"
     xmlns:viewmodels="using:Pango.Desktop.Uwp.ViewModels"
     xmlns:views="using:Pango.Desktop.Uwp.Views"
     xmlns:abstract="using:Pango.Desktop.Uwp.Views.Abstract"
@@ -15,37 +13,6 @@
     d:DataContext="{d:DesignInstance Type=viewmodels:PasswordsViewModel}"
     d:DesignHeight="300"
     d:DesignWidth="400">
-
-    <abstract:PageBase.Resources>
-        <DataTemplate x:Key="FolderTemplate" x:DataType="models:PasswordExplorerItem">
-            <TreeViewItem AutomationProperties.Name="{x:Bind Name}"
-                          ItemsSource="{x:Bind Children}" IsExpanded="True">
-                <StackPanel Orientation="Horizontal">
-                    <Image Width="20" 
-                           Source="../Assets/folder.png"/>
-                    <TextBlock Margin="0,0,10,0"/>
-                    <TextBlock Text="{x:Bind Name}" />
-                </StackPanel>
-            </TreeViewItem>
-        </DataTemplate>
-
-        <DataTemplate x:Key="FileTemplate" 
-                      x:DataType="models:PasswordExplorerItem">
-            <TreeViewItem AutomationProperties.Name="{x:Bind Name}">
-                <StackPanel Orientation="Horizontal">
-                    <FontIcon Margin="5,2"
-                              Glyph="&#xE8D7;"
-                              FontSize="{StaticResource FontIconSize}"/>
-                    <TextBlock Margin="0,0,10,0"/>
-                    <TextBlock Text="{x:Bind Name}"/>
-                </StackPanel>
-            </TreeViewItem>
-        </DataTemplate>
-
-        <templateselectors:PasswordExplorerItemTemplateSelector x:Key="PasswordExplorerItemTemplateSelector"
-                                                                FolderTemplate="{StaticResource FolderTemplate}"
-                                                                FileTemplate="{StaticResource FileTemplate}" />
-    </abstract:PageBase.Resources>
 
     <Grid>
         <Pivot x:Name="PasswordsIndex_Pivot">
@@ -104,53 +71,8 @@
                         <Grid Grid.Row="1"
                               Margin="10">
                             <TreeView ItemsSource="{Binding Path=Passwords}"
+                                      ItemContainerStyle="{StaticResource MUX_TreeViewItemStyle}"
                                       ItemTemplateSelector="{StaticResource PasswordExplorerItemTemplateSelector}" />
-                            <!--<ListView ItemsSource="{Binding Path=Passwords}">
-                                <ListView.ItemTemplate>
-                                    <DataTemplate>
-                                        <Grid>
-                                            <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="Auto"/>
-                                                <ColumnDefinition Width="*"/>
-                                                <ColumnDefinition Width="Auto"/>
-                                            </Grid.ColumnDefinitions>
-
-                                            <FontIcon Glyph="&#xE8D7;"
-                                                      Margin="5,2"
-                                                      FontSize="{StaticResource FontIconSize}"/>
-
-                                            <TextBlock Grid.Column="1" 
-                                                       Text="{Binding Path=Name}"
-                                                       VerticalAlignment="Center"/>
-
-                                            <StackPanel Grid.Column="2"
-                                                        Orientation="Horizontal">
-                                                <Button Margin="2"
-                                                        CommandParameter="{Binding}"
-                                                        ToolTipService.ToolTip="{loc:StringResource Key=CopyPassword}"
-                                                        Command="{Binding ElementName=PasswordsIndex_Pivot, Path=DataContext.CopyPasswordToClipboardCommand}">
-                                                    <FontIcon Glyph="&#xE8C8;"
-                                                              FontSize="{StaticResource FontIconSize}"/>
-                                                </Button>
-                                                <Button Margin="2"
-                                                        CommandParameter="{Binding}"
-                                                        ToolTipService.ToolTip="{loc:StringResource Key=EditPassword}"
-                                                        Command="{Binding ElementName=PasswordsIndex_Pivot, Path=DataContext.EditPasswordCommand}">
-                                                    <FontIcon Glyph="&#xE70F;"
-                                                              FontSize="{StaticResource FontIconSize}"/>
-                                                </Button>
-                                                <Button Margin="2" 
-                                                        CommandParameter="{Binding}"
-                                                        Command="{Binding ElementName=PasswordsIndex_Pivot, Path=DataContext.DeletePasswordCommand}"
-                                                        ToolTipService.ToolTip="{loc:StringResource Key=DeletePassword}">
-                                                    <FontIcon Glyph="&#xE74D;"
-                                                              FontSize="{StaticResource FontIconSize}"/>
-                                                </Button>
-                                            </StackPanel>
-                                        </Grid>
-                                    </DataTemplate>
-                                </ListView.ItemTemplate>
-                            </ListView>-->
                         </Grid>
                     </Grid>
 
@@ -176,6 +98,6 @@
                 <views:EditPasswordView />
             </PivotItem>
         </Pivot>
-        
+
     </Grid>
 </abstract:PageBase>
