--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/App.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/App.xaml
@@ -15,6 +15,7 @@
                         <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
                         <ResourceDictionary Source="Resources/Styles/TextBlockStyles.xaml" />
                         <ResourceDictionary Source="Resources/Styles/ToggleSwitchStyles.xaml" />
+                        <ResourceDictionary Source="Resources/Styles/TreeViewStyles.xaml" />
                         
                         <ResourceDictionary Source="Controls/ValidationTextBox.xaml" />
                         <ResourceDictionary Source="Controls/ValidationPasswordBox.xaml" />
