feat: add a dialog for catalog creation
refs: #20

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Views/PasswordsView.xaml
@@ -65,12 +65,18 @@
                                               Label="{loc:StringResource Key=New}"
                                               Command="{Binding Path=CreatePasswordCommand}"
                                               ToolTipService.ToolTip="{loc:StringResource Key=AddNewPassword}"/>
+
+                                <AppBarButton Icon="NewFolder" 
+                                              Label="{loc:StringResource Key=New}"
+                                              Command="{Binding Path=CreateCatalogCommand}"
+                                              ToolTipService.ToolTip="{loc:StringResource Key=AddNewCatalog}"/>
                             </CommandBar>
                         </Grid>
 
                         <Grid Grid.Row="1"
                               Margin="10">
-                            <TreeView ItemsSource="{Binding Path=Passwords}"
+                            <TreeView x:Name="PasswordsTreeView" 
+                                      ItemsSource="{Binding Path=Passwords}"                                      
                                       ItemContainerStyle="{StaticResource MUX_TreeViewItemStyle}"
                                       ItemTemplateSelector="{StaticResource PasswordExplorerItemTemplateSelector}" />
                         </Grid>
