feat: add a combobox for displaying all available catalogs

--- a/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/NewPasswordCatalogDialog.xaml
+++ b/src/Presentation/Desktop/Pango.Desktop.Uwp/Dialogs/Views/NewPasswordCatalogDialog.xaml
@@ -5,8 +5,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Pango.Desktop.Uwp.Controls"
-    xmlns:dialogviewmodels="using:Pango.Desktop.Uwp.Dialogs.ViewModels"
     xmlns:loc="using:Pango.Desktop.Uwp.Core.Localization"
+    xmlns:dialogviewmodels="using:Pango.Desktop.Uwp.Dialogs.ViewModels"
     d:DataContext="{d:DesignInstance Type=dialogviewmodels:NewPasswordCatalogDialogViewModel}"
     mc:Ignorable="d">
 
@@ -16,19 +16,31 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        
-        <StackPanel Margin="10" 
-                    Orientation="Horizontal"
-                    Visibility="{Binding InitialCatalog, Converter={StaticResource NullOrEmptyToCollapsedConverter}}">
-            <Image Width="20"
-                   Margin="10"
-                   Source="../../Assets/folder.png"/>
-            <TextBlock VerticalAlignment="Center">
-                <Run Text="{Binding Path=InitialCatalog}"/><Run Text="/"/><Run Text="{Binding Path=NewCatalogName}"/>
+
+
+        <StackPanel Orientation="Horizontal">
+            <ComboBox ItemsSource="{Binding Path=AvailableCatalogs}"
+                      SelectedItem="{Binding Path=InitialCatalog, UpdateSourceTrigger=PropertyChanged}">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Margin="10"
+                                    Orientation="Horizontal">
+                            <Image Width="20"
+                                   Source="../../Assets/folder.png"/>
+                            <TextBlock Text="{Binding}"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+
+            <TextBlock VerticalAlignment="Center"
+                       Margin="5">
+                <Run Text="/"/><Run Text="{Binding Path=Text, ElementName=NewCatalogNameTextBlock}"/>
             </TextBlock>
         </StackPanel>
-        
-        <controls:ValidationTextBox Margin="10"
+
+        <controls:ValidationTextBox x:Name="NewCatalogNameTextBlock" 
+                                    Margin="10"
                                     Grid.Row="1"
                                     PropertyName="NewCatalogName"
                                     Text="{Binding Path=NewCatalogName, Mode=TwoWay}"
